updated to java 11 and adjusted dependencies